JDK17 amendments