@@ -161,13 +161,13 @@ public class ProgressiveLoanInterestScheduleModel {
         if (repaymentPeriods.isEmpty()) {
             return 0;
         }
-        final RepaymentPeriod firstPeriod = repaymentPeriods.getFirst();
+        final RepaymentPeriod firstPeriod = repaymentPeriods.iterator().next();
         final RepaymentPeriod lastPeriod = repaymentPeriods.size() > 1 ? getLastRepaymentPeriod() : firstPeriod;
         return DateUtils.getExactDifferenceInDays(firstPeriod.getFromDate(), lastPeriod.getDueDate());
     }
 
     public LocalDate getStartDate() {
-        return !repaymentPeriods.isEmpty() ? repaymentPeriods.getFirst().getFromDate() : null;
+        return !repaymentPeriods.isEmpty() ? repaymentPeriods.iterator().next().getFromDate() : null;
     }
 
     public LocalDate getMaturityDate() {
@@ -294,7 +294,7 @@ public class ProgressiveLoanInterestScheduleModel {
         } else {
             return repaymentPeriod.getInterestPeriods().stream()
                     .filter(ip -> date.isAfter(ip.getFromDate()) && !date.isAfter(ip.getDueDate())).reduce((first, second) -> second)
-                    .orElse(repaymentPeriod.getInterestPeriods().getFirst());
+                    .orElse(repaymentPeriod.getInterestPeriods().iterator().next());
         }
     }
 
@@ -369,7 +369,7 @@ public class ProgressiveLoanInterestScheduleModel {
 
     @NotNull
     public RepaymentPeriod getLastRepaymentPeriod() {
-        return repaymentPeriods.getLast();
+        return repaymentPeriods.get(repaymentPeriods.size() - 1);
     }
 
     public boolean isLastRepaymentPeriod(@NotNull RepaymentPeriod repaymentPeriod) {
